# fwxvii

./: .clang-format  .gitignore  LICENSE  MODULE.bazel  MODULE.bzl  treefmt.toml
bazel/includes/: toolchains.MODULE.bazel
nix/: flake.nix
tools/: clang-format
