# Custom Clang Toolchain.
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

# When overriding something, get defaults from: https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/cc_toolchain_config.bzl
llvm.toolchain(
    name = "clang_toolchain",
    # stdlib = "libc++",
    compile_flags = {
        "linux-x86_64": [
            "--target=x86_64-unknown-linux-gnu",
            # Security
            "-U_FORTIFY_SOURCE",  # https://github.com/google/sanitizers/issues/247
            "-fstack-protector",
            "-fno-omit-frame-pointer",
            # Diagnostics
            "-fcolor-diagnostics",
            "-Wall",
            "-Wthread-safety",
            "-Wself-assign",
            "-Wmissing-field-initializers",
            "-Werror",
        ],
    },
    cxx_flags = {
        "linux-x86_64": [
            "-std=c++20",
            "-stdlib=libc++",
        ],
    },
    llvm_version = "19.1.0",
)
use_repo(llvm, "clang_toolchain")

register_toolchains("@clang_toolchain//:all")
